; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp8_mc_msa.c_ff_put_vp8_bilinear4_hv_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp8_mc_msa.c_ff_put_vp8_bilinear4_hv_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bilinear_filters_msa = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_put_vp8_bilinear4_hv_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %17 = load i32**, i32*** @bilinear_filters_msa, align 8
  %18 = load i32, i32* %13, align 4
  %19 = sub nsw i32 %18, 1
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i32*, i32** %17, i64 %20
  %22 = load i32*, i32** %21, align 8
  store i32* %22, i32** %15, align 8
  %23 = load i32**, i32*** @bilinear_filters_msa, align 8
  %24 = load i32, i32* %14, align 4
  %25 = sub nsw i32 %24, 1
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32*, i32** %23, i64 %26
  %28 = load i32*, i32** %27, align 8
  store i32* %28, i32** %16, align 8
  %29 = load i32, i32* %12, align 4
  %30 = icmp eq i32 4, %29
  br i1 %30, label %31, label %39

31:                                               ; preds = %7
  %32 = load i32*, i32** %10, align 8
  %33 = load i32, i32* %11, align 4
  %34 = load i32*, i32** %8, align 8
  %35 = load i32, i32* %9, align 4
  %36 = load i32*, i32** %15, align 8
  %37 = load i32*, i32** %16, align 8
  %38 = call i32 @common_hv_2ht_2vt_4x4_msa(i32* %32, i32 %33, i32* %34, i32 %35, i32* %36, i32* %37)
  br label %51

39:                                               ; preds = %7
  %40 = load i32, i32* %12, align 4
  %41 = icmp eq i32 8, %40
  br i1 %41, label %42, label %50

42:                                               ; preds = %39
  %43 = load i32*, i32** %10, align 8
  %44 = load i32, i32* %11, align 4
  %45 = load i32*, i32** %8, align 8
  %46 = load i32, i32* %9, align 4
  %47 = load i32*, i32** %15, align 8
  %48 = load i32*, i32** %16, align 8
  %49 = call i32 @common_hv_2ht_2vt_4x8_msa(i32* %43, i32 %44, i32* %45, i32 %46, i32* %47, i32* %48)
  br label %50

50:                                               ; preds = %42, %39
  br label %51

51:                                               ; preds = %50, %31
  ret void
}

declare dso_local i32 @common_hv_2ht_2vt_4x4_msa(i32*, i32, i32*, i32, i32*, i32*) #1

declare dso_local i32 @common_hv_2ht_2vt_4x8_msa(i32*, i32, i32*, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
